# cuda-video-processor

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: README.md  benchmark.cu
benchmarks/results/: rtx3090.md  rtx3090_maxpower.md  rtx4090.md  rtx4090_maxpower.md
src/: common.h  cuda_check.h  main.cu  opengl_renderer.cpp  opengl_renderer.h  video_reader.cpp  video_reader.h
src/kernels/: brightness_histogram.cu  brightness_histogram.cuh  enhance.cu  enhance.cuh  histogram.cu  histogram.cuh  sobel.cu  sobel.cuh
